= Changelog
:toc: macro
:project-url: https://github.com/sorairolake/rscrypt
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.2.0\...HEAD[Unreleased]

=== Changed

* Change the minimum value of `--max-memory` to 1 MiB

=== Fixed

* Fix create a package for Windows in CD

== {compare-url}/v0.1.1\...v0.2.0[0.2.0] - 2022-12-10

=== Added

* Add options related to resources
* Add option to output the encryption parameters as data exchange formats

=== Changed

* Change to allow empty password

=== Fixed

* Fix to remove trailing newline from password

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2022-11-24

=== Changed

* Move common code into functions

=== Fixed

* Change to not read both passphrase and input data from stdin at the same time

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2022-11-18

=== Added

* Initial release