@@ -35,6 +35,11 @@ just build
   Enable outputting the encryption parameters as JSON.
   This is enabled by default.
 
+`msgpack`::
+
+  Enable outputting the encryption parameters as MessagePack.
+  This is enabled by default.
+
 `toml`::
 
   Enable outputting the encryption parameters as TOML.
