@@ -26,6 +26,7 @@ clap_complete = "4.0.6"
 dialoguer = { version = "0.10.2", default-features = false, features = ["password"] }
 fraction = { version = "0.12.2", default-features = false }
 once_cell = "1.16.0"
+rmp-serde = { version = "1.1.1", optional = true }
 scryptenc = "0.4.1"
 serde = { version = "1.0.149", features = ["derive"], optional = true }
 serde_json = { version = "1.0.89", optional = true }
@@ -40,9 +41,10 @@ assert_cmd = "2.0.7"
 predicates = "2.1.4"
 
 [features]
-default = ["cbor", "json", "toml", "yaml"]
+default = ["cbor", "json", "msgpack", "toml", "yaml"]
 cbor = ["dep:ciborium", "dep:serde"]
 json = ["dep:serde", "dep:serde_json"]
+msgpack = ["dep:rmp-serde", "dep:serde"]
 toml = ["dep:serde", "dep:toml"]
 yaml = ["dep:serde", "dep:serde_yaml"]
 
