@@ -6,7 +6,7 @@
 
 = rscrypt-info(1)
 // Specify in UTC.
-:docdate: 2022-12-05
+:docdate: 2022-12-15
 :doctype: manpage
 ifdef::revnumber[:mansource: rscrypt {revnumber}]
 :manmanual: General Commands Manual
@@ -33,7 +33,7 @@ _FILE_::
 
 == OPTIONS
 
-ifdef::cbor,json,toml,yaml[]
+ifdef::cbor,json,msgpack,toml,yaml[]
 *-f*, *--format* _FORMAT_::
 
   Output format.
@@ -51,6 +51,12 @@ ifdef::json[]
 
       JSON.
 endif::json[]
+
+ifdef::msgpack[]
+    *msgpack*::::
+
+      MessagePack.
+endif::msgpack[]
 
 ifdef::toml[]
     *toml*::::
