@@ -14,6 +14,10 @@ toc::[]
 
 == {compare-url}/v0.2.0\...HEAD[Unreleased]
 
+=== Added
+
+* Add MessagePack to output format
+
 === Changed
 
 * Change the minimum value of `--max-memory` to 1 MiB
